@@ -10,6 +10,7 @@ Add ability to upload a file to an ADS
 Update BloodHound
 Pull out unpatched payloads into file for easy management
 Add base64 encoded versions of the shellcode to the payloads directory
+Add a configurable jitter to all implants
 
 4.8 (13/02/19)
 ==============
